# Atoms

./: 3d_fluid_density.cpp  CMakeLists.txt  Makefile  README.md  save.cpp  save3.cpp  wtf.cpp
src/: 2D_bohr_rutherford.cpp  atom.cpp  atom2.cpp  atom2_raytracer.cpp  atom2_realtime.cpp  atom3_raytracer.cpp  atom_raytracer.cpp  atom_realtime.cpp  black_hole.cu  black_hole_2D.cpp  blur.frag  composite.frag  gravity_sim.cpp  hardee_fock.py  iso_schrodinger.py  schrodinger.py  schrodinger_dynamic.py  splat.frag  splat.vert
src/file_saves/: orbital_visualizer_raw.cpp  raw_3d_generation.cpp
src/orbitals/: orbital_n2_l1_m1.json  orbital_n6_l4_m1.json  orbital_n7_l4_m0.json
z_saves/: atom.cpp  raw_visualizer.cpp
